apps/k8s/httpd/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: www-deployment
  labels:
    app: www
    tier: content
spec:
  replicas: 1
  selector:
    matchLabels:
      app: www
      tier: content
  template:
    metadata:
      labels:
        app: www
        tier: content
    spec:
      containers:
        - name: httpd
          image: httpd:2.4
          ports:
            - name: http
              containerPort: 80
          # livenessProbe:
          #   httpGet:
          #     path: "/"
          #     port: 80
          #   initialDelaySeconds: 10
          #   periodSeconds: 30
          #   timeoutSeconds: 5
          #   failureThreshold: 5
          # readinessProbe:
          #   httpGet:
          #     path: "/"
          #     port: 80
          #   initialDelaySeconds: 10
          #   periodSeconds: 30
          #   timeoutSeconds: 5
          #   failureThreshold: 3
          volumeMounts:
            - name: www-content
              mountPath: /usr/local/apache2/htdocs
            - name: httpd-config
              mountPath: /usr/local/apache2/conf/httpd.conf
              subPath: httpd.conf
      volumes:
        - name: www-content
          persistentVolumeClaim:
            claimName: www-site-content
        - name: httpd-config
          configMap:
            name: httpd-content-config
