apps/k8s/httpd/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: www
  labels:
    app: www
    tier: content
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: www
    tier: content
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: dav
  labels:
    app: www
    tier: dav
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: www
    tier: dav
  type: ClusterIP
