apps/k8s/httpd/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: www-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  # - host: "webdav.kevharv.com"
  #   http:
  #     paths:
  #     - pathType: Prefix
  #       path: "/"
  #       backend:
  #         service:
  #           name: dav
  #           port:
  #             number: 80
  - host: "content.kevharv.com"
    http:
      paths:
      - pathType: Prefix
        path: "/me"
        backend:
          service:
            name: www
            port:
              number: 80
